fix text alignment

--- a/custom.scss
+++ b/custom.scss
@@ -139,3 +139,9 @@ code{
 a{
  color: $blue-link   
 }
+
+// p tag text align
+
+p {
+    text-align: justify;
+  }
